# nexus-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH_POSTS.md  LICENSE  MEMORY_FLAGSHIP_PLAN.md  Makefile  PROJECT_PLAN.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  mcp_backends.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly_benchmark.yml
alembic/: env.py
alembic/versions/: 1a87a657bb74_add_unique_constraint_on_approval_votes_.py  4dca71e6e14e_doctrine_outbox_calibration_snapshots.py  5bae08f562c8_initial_schema_traces_critic_registry_.py  8a4579763b4d_add_beliefs_table_for_phase_12_memory_.py  a8efac170259_add_webhooks_table.py  (+8 more)
app/: cli.py  config.py  db.py  errors.py  logging_config.py  main.py  metrics.py  middleware.py  sanitize.py  tracing.py  version.py
docs/: CLOSED_LOOP_RUNBOOK.md  DOCTRINE_LAB_UPGRADE.md  LAUNCH_PREFLIGHT.md  PRODUCTION_READINESS.md  backup_dr_runbook.md  benchmarks.md  beta_deploy_runbook.md  external_eval.md  fame_playbook.md  hermes_integration.md  memory.md  openclaw_integration.md  self_learning_research_brief.md
examples/: README.md  agent_demo.py  basic_run.py  governance_demo.py  injection_demo.py  multi_model_compare.py
scripts/: build_injection_demo_gif.py  import_asflc_dataset.py  wire_injection_critic.py
tests/: conftest.py  test_advanced_training.py  test_agent_loop.py  test_agent_loop_memory.py  test_alembic_migrations.py  test_analyzer.py  test_api_versioning.py  test_asflc.py  test_audit_export.py  test_benchmark.py  test_capability_token_store.py  test_circuit_breaker.py  test_circuit_breaker_dashboard.py  test_clawhub_import.py  test_cli_approval.py  test_compare.py  test_config_validator.py  test_cors.py  test_covernor.py  test_critic.py  test_critic_scores_export.py  test_dashboard.py  test_dashboard_csrf.py  test_dashboard_memory.py  test_db_pool.py  test_e2e.py  test_error_responses.py  test_governance.py  test_graceful_shutdown.py  test_health_probe.py  test_idempotency.py  test_immune.py  test_integrity.py  test_llm_cache.py  test_llm_provider.py  test_local_lora_critic.py  test_mcp_cli.py  test_mcp_proxy.py  test_memory_api.py  test_memory_cli.py  (+25 more)
(+106 files in other folders)
