[project]
name = "nexus-agent"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
packages = ["app"]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
disallow_untyped_defs = true
check_untyped_defs = true
# SQLAlchemy Column vs Python types and Starlette middleware stubs need follow-up
disable_error_code = [
    "arg-type",
    "attr-defined",
    "call-arg",
    "misc",
    "operator",
    "union-attr",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
