[project]
name = "nexus-agent"
version = "0.1.0"
requires-python = ">=3.13"

[project.scripts]
nexus = "app.cli:main"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
packages = ["app"]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
disallow_untyped_defs = true
check_untyped_defs = true
# SQLAlchemy Column vs Python types and Starlette middleware stubs need follow-up
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "misc",
    "operator",
    "union-attr",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["app"]
omit = ["app/templates/*", "app/static/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2
# Baseline measured at 83%; set the gate 3 points below so normal fluctuation
# doesn't break CI while a real regression (e.g. a new feature landing without
# tests) does. Ratchet this up as coverage improves — never down.
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
